feat: add default package in case no one is specified (#442)